# nn-rust

./: Cargo.toml  README.md  model  relu_model  sigmoid_model
src/: dataset.rs  lib.rs  main.rs  metrics.rs  neural_network.rs
src/activation/: cache.rs  mod.rs  relu.rs  sigmoid.rs
src/dataloader/: mnist_loader.rs  mod.rs
src/layer/: dense.rs  mod.rs  relu.rs  sigmoid.rs  softmax_cross_entropy.rs
src/model/: builder.rs  encoder.rs  mod.rs  model.rs
