[package]
name = "nn-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.9"
ndarray = {version ="0.17.1", features = ["serde", "blas"]}
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray-rand = "0.16.0"
rand = "0.9.2"
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
bincode = {version ="2.0.1", features = ["serde"]}
